--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "testing-app",
   "version": "0.1.0",
+  "homepage": "https://smileTheKing.github.io/software-3.8-react-router",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -15,7 +16,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": [
@@ -36,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.0.0",
     "react-router-dom": "^6.15.0"
   }
 }
