--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testing-app",
+  "name": "software-3.8-react-router",
   "version": "0.1.0",
   "homepage": "https://smileTheKing.github.io/software-3.8-react-router",
   "private": true,
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -19,7 +20,6 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-
   },
   "eslintConfig": {
     "extends": [
