--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "software-3.8-react-router",
-  "homepage": "http://smileTheKing.github.io/software-3.8-react-router",
+  "homepage": "http://smileTheKing.github.io/software-3.8-react-router/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,7 +20,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-   
   },
   "eslintConfig": {
     "extends": [
